[tool.poetry]
name = "pytest-durations"
version = "1.4.0"
description = "Pytest plugin reporting fixtures and test functions execution time."
authors = ["Oleg Blednov <oleg.codev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blake-r/pytest-durations"
repository = "https://github.com/blake-r/pytest-durations"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
]
include = ["LICENSE"]

[tool.poetry.plugins."pytest11"]
pytest-durations = "pytest_durations"

[tool.poetry.dependencies]
pytest = ">=4.6"
python = ">=3.8.1"

[tool.poetry.group.dev.dependencies]
add-trailing-comma = "^3.1.0"
autoflake = "^2.3.1"
black = "^24.8.0"
flake8 = "^7.1.1"
freezegun = "^1.5.1"
pre-commit = "^3.5"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
