[tool.poetry]
name = "pytest-durations"
version = "1.6.2"
description = "Pytest plugin reporting fixtures and test functions execution time."
authors = ["Oleg Blednov <oleg.codev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blake-r/pytest-durations"
repository = "https://github.com/blake-r/pytest-durations"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Pytest",
]
include = ["LICENSE"]

[tool.poetry.plugins."pytest11"]
pytest-durations = "pytest_durations"

[tool.poetry.dependencies]
pytest = ">=7.0"
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.5.5"
pre-commit = "^3.8.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
ruff = "^0.11.7"
typos = "^1.44.0"
time-machine = "^2.19.0"
virtualenv = "^21.2.0"

[tool.poetry.group.sync.dependencies]
poetry = "*"
setuptools = "*"
wheel = "*"
zstandard = "^0.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
